# eqProj

eq-hmi20191219/: README.md  (+42 more)
eq-local-planning/: CMakeLists.txt  README.md  main.cpp
eq-local-planning/data/: for_plamform_birang_to_unload.map  for_plamform_load_to_birang.map  for_plamform_load_to_unload.map  for_plamform_return.map
eq-local-planning/data/MapEditorProfessional20191012/: MapEditorProfessional.pro  MapEditorProfessional.pro.user.158a65f  MapEditorProfessional.pro.user.38e1c77  ins_novatel_pp7d_decode.cpp  ins_novatel_pp7d_decode.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
eq-local-planning/data/MapEditorProfessional20191012/commonUsed/: GL8_structures.h  database.cpp  database.h  hserialport.cpp  hserialport.h  pubclass.h  pubfunc.cpp  pubfunc.h  qdisplaywidget1.cpp  qdisplaywidget1.h  qdisplaywidget2.cpp  qdisplaywidget2.h  tdinsdecode.cpp  tdinsdecode.h  typedefs.h
eq-local-planning/data/MapEditorProfessional20191012/geographicLib_header/: Constants.hpp  GeodesicLine.hpp
eq-local-planning/data/MapEditorProfessional20191012/geographicLib_source/: Geocentric.cpp  Geodesic.cpp  GeodesicLine.cpp  LocalCartesian.cpp  Math.cpp
eq-local-planning/src/: CMakeLists.txt
eq-local-planning/src/planning/: :w  frenet.cpp
eq-local-planning/src/vehicle/: CMakeLists.txt  Control.cpp  State.cpp
eq-v2x/: CMakeLists.txt
eq-v2x/app/: CMakeLists.txt  base64.cpp  ntrip_client_main.cpp  ntrip_write.cpp  rtcm_share.cpp  setup.sh
eq-v2x/cmake/: FindBoost.cmake  FindNetlib.cmake
eq-v2x/conf/: params.conf
eq-v2x/conf/ForkLift/: params.conf
eq-v2x/conf/LJT/: params.conf
eq-v2x/conf/LJZ/: params.conf
eq-v2x/conf/XC/: params.conf
eq-v2x/conf/mineVehicle-1/: params.conf
eq-v2x/conf/mineVehicle-2/: params.conf
eq-v2x/include/: pub_types.hpp
eq-v2x/release/ntrip_share/: ntrip-share.service  setup.sh
eq-v2x/src/: CMakeLists.txt
eq-v2x/src/ser_outside_xc/: CMakeLists.txt
eq-v2x/tests/: CMakeLists.txt  blocking_tcp_client.cpp  timeout_test.cpp
eq-v2x/tools/: CMakeLists.txt  client_demo.cpp  http_v2x.cpp  sqlite_shell.c  testSerial.cpp  test_gps.cpp  test_http.cpp  updateHttpParams.cpp  uuid_generator.cpp  writeHttpParams.cpp  writeTcpParams.cpp
(+137 files in other folders)
